rakuten/enforce-robin-storageclass/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-default-storageclass
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
